# agents-from-scratch

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  langgraph.json  pyproject.toml  run_all_tests.py  run_tests.sh
data_loader/gmail/: gmail.py  run_ingest.py  setup_gmail.py
eval/: email_dataset.py  evaluate_response.py  evaluate_triage.py  prompt.py  prompts.py
notebooks/: LangGraph101.ipynb  agent.ipynb  agent.md  evaluation.ipynb  evaluation.md  hitl.ipynb  hitl.md  langgraph_101.ipynb  memory.ipynb  memory.md  test_tools.py
notebooks/img/: img_helper.py
notebooks/wip/: memory.md
src/email_assistant/: baseline_agent.py  configuration.py  cron.py  email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_memory.py  email_assistant_hitl_memory_gmail.py  email_assistant_react.py  graph.py  langgraph_101.py  prompts.py  schemas.py  state.py  utils.py
src/email_assistant/tools/: __init__.py  base.py
src/email_assistant/tools/default/: __init__.py  email_tools.py  prompt_templates.py
src/email_assistant/tools/gmail/: README.md  __init__.py  gmail_tools.py  run_ingest.py  setup_cron.py  setup_gmail.py
tests/: conftest.py  hitl_testing.ipynb  memory_testing.ipynb  run_all_tests.py  test_email_assistant.py  test_email_assistant_hitl.py  test_email_assistant_memory.py  test_email_assistant_react.py  test_email_assistant_workflow.py  test_hitl.py  test_memory.py  test_notebooks.py  test_response.py  test_run.py
